限制 webdav 存储源链接时间为 10 秒, 避免因网络问题一直卡住等待。